force-app/main/default/objects/SVMXA360__SM_MaintenancePlanProcess__c/SVMXA360__SM_MaintenancePlanProcess__c.object-meta.xml
<CustomObject>
    <description>A360 Maintenance Plans offer a schedule-based processing engine for reviewing maintenance plans and generating work orders for covered assets on those plans. This engine is informed by Maintenance Plan Processes, which are stored in this object. The A360 Maintenance Plan Process object stores process details such as when a process should run, what information will be mapped to the work orders generated by the process, who is assigned the work orders, and how the execution of the process should be logged.</description>
    <label>A360 Maintenance Plan Process</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Maintenance Plan Process Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>A360 Maintenance Plan Processes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>