force-app/main/default/objects/SVMXA360__SM_MaintenancePlanProcess__c/fields/SVMXA360__EnableDetailedLoggingNotifications__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__EnableDetailedLoggingNotifications__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, engine detailed log notifications will be enabled</description>
    <label>Enable Detailed Logging Notifications</label>
    <type>Checkbox</type>
</CustomField>