force-app/main/default/objects/SVMXA360__SM_MaintenancePlanProcess__c/fields/SVMXA360__SM_AssignTo__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__SM_AssignTo__c</fullName>
    <description>User value to be fetched from to assign Work Order generated from the Maintenance Plan process</description>
    <label>Assign To</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>Queue</fullName>
            </value>
            <value>
                <fullName>Configurable User Field</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>