force-app/main/default/objects/SVMXA360__SM_MaintenancePlanProcess__c/fields/SVMXA360__SM_AssignToObjectAPIName__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__SM_AssignToObjectAPIName__c</fullName>
    <description>API name of the object on which the user field is configured.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Assign To Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>