force-app/main/default/objects/SVMXA360__SM_MaintenancePlanProcess__c/fields/SVMXA360__SM_AssignToValue__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__SM_AssignToValue__c</fullName>
    <description>Based on the Assign To Selected, this field will hold the value of User/Queue/User Field API name of the selected object.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Assign To Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>