force-app/main/default/objects/SVMXA360__SM_MaintenancePlanProcess__c/fields/SVMXA360__SM_DaysInAdvance__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__SM_DaysInAdvance__c</fullName>
    <description>The number of days in advance the Work Order needs to be created. This setting is specific to time-based Work Rule Conditions, whereas the Threshold field on the Condition supports the Frequency and Criteria-based Work Rule Conditions.</description>
    <label>Days In Advance</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>