force-app/main/default/objects/SVMXA360__SM_MaintenancePlanProcess__c/fields/SVMXA360__SM_Description__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__SM_Description__c</fullName>
    <description>Description of the Maintenance Plan Process</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>