force-app/main/default/objects/SVMXA360__SM_MaintenancePlanProcess__c/fields/SVMXA360__SM_DeveloperName__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__SM_DeveloperName__c</fullName>
    <description>Process unique developer name</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Developer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>