force-app/main/default/objects/SVMXA360__SM_MaintenancePlanProcess__c/fields/SVMXA360__SM_isActive__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__SM_isActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This flag indicates if the maintenance plan process is active or not</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>