force-app/main/default/objects/SVMXA360__SM_MaintenancePlanProcess__c/fields/SVMXA360__SM_LastRunDate__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__SM_LastRunDate__c</fullName>
    <description>This field indicates the date/time of when the process last ran. It provides a link to the process log for the most recent run.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Run Date</label>
    <type>DateTime</type>
</CustomField>