force-app/main/default/objects/SVMXA360__SM_MaintenancePlanProcess__c/fields/SVMXA360__SM_LastRunStatus__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__SM_LastRunStatus__c</fullName>
    <description>This field indicates the status of the last run performed for this process. Values include Success, Failed and No Plans.</description>
    <label>Last Run Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>