force-app/main/default/objects/SVMXA360__SM_MaintenancePlanProcess__c/fields/SVMXA360__SM_MappingAssettoWOId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__SM_MappingAssettoWOId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Mapping to be applied from Asset on generation of Work Order</description>
    <label>Mapping Asset to Work Order</label>
    <referenceTo>SVMXA360__CONF_ObjectMapping__c</referenceTo>
    <relationshipLabel>A360 Maintenance Plan Processes (Mapping Asset to Work Order)</relationshipLabel>
    <relationshipName>A360_Maintenance_Plan_Processes1</relationshipName>
    <type>Lookup</type>
</CustomField>