force-app/main/default/objects/SVMXA360__SM_MaintenancePlanProcess__c/fields/SVMXA360__SM_MappingMPlantoWOId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__SM_MappingMPlantoWOId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Mapping to be applied from Maintenance Plan on generation of Work Order</description>
    <label>Mapping MPlan to Work Order</label>
    <referenceTo>SVMXA360__CONF_ObjectMapping__c</referenceTo>
    <relationshipLabel>A360 Maintenance Plan Processes (Mapping MPlan to Work Order)</relationshipLabel>
    <relationshipName>A360_Maintenance_Plan_Processes2</relationshipName>
    <type>Lookup</type>
</CustomField>