force-app/main/default/objects/SVMXA360__SM_MaintenancePlanProcess__c/fields/SVMXA360__SM_RunAt__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__SM_RunAt__c</fullName>
    <description>Time of the day at which the process to be triggered</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Run At</label>
    <length>20</length>
    <type>Text</type>
</CustomField>