force-app/main/default/objects/SVMXA360__SM_MaintenancePlanProcess__c/fields/SVMXA360__SM_SendFailureEmailTo__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__SM_SendFailureEmailTo__c</fullName>
    <description>Email address to which email to be sent on failure of the Maintenance plan process</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Send Failure Email To</label>
    <type>Email</type>
</CustomField>