force-app/main/default/objects/SVMXA360__SM_MaintenancePlanProcess__c/fields/SVMXA360__SM_SendSuccessEmailTo__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__SM_SendSuccessEmailTo__c</fullName>
    <description>Email address to which the email to be sent when the Maintenance Plan runs successfully.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Send Success Email To</label>
    <type>Email</type>
</CustomField>