force-app/main/default/objects/SVMXA360__SM_MaintenancePlanProcess__c/fields/SVMXA360__SM_Standard__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__SM_Standard__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, signifies the standard/default process. This field can only be checked for one process at any given time since only one process can considered the standard process.</description>
    <label>Standard</label>
    <type>Checkbox</type>
</CustomField>