force-app/main/default/objects/SVMXA360__SM_MaintenancePlanProcess__c/fields/SVMXA360__SM_TimeZone__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__SM_TimeZone__c</fullName>
    <description>Time Zone to be considered for running the process at scheduled time</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Time Zone</label>
    <length>80</length>
    <type>Text</type>
</CustomField>